# PREN2

./: .env.example  .flake8  .gitattributes  .gitignore  LICENSE  README.md  TODO.md  asynciotest.py  config_11.txt  config_12.txt  config_r.txt  cubepiler.service  gui copy.py  gui.py  main.py  main.py.prev  pyproject.toml
ApexRaspiScripts/: START2.py  Testatprogramm.py  ansteuerungsprogramm2.py  ansteuerungsprogrammprobe.py  ansteuerungsvisual.py  mainansteuerungsprogramm.py  mainansteuerungsprogramm2.py  mainreset.py  mainresettischdown.py  mainresettischup.py  mainstart.py  maintischdown.py  maintischup.py  mainvisualtisch.py
ApexRaspiScripts/ARaspiscripts/: Team 12 Token
ApexRaspiScripts/bilderkennung/: CubeReconstruction.py  cube.py  getTwoSidesStream.py  mainbildhidden.py  mainvisualbild.py  probestreamerkennung.py  probestreamerkennunghidden.py  referenceQuarter.py
Display repo/: Start.py
Display repo/Demo/: DRV8825.py  (+2 more)
Software/: Software Raspberry.rtf
TestData/: cube_fast_1.mkv
cubepiler/: DRV8825.py  DRV8825_n.py  DRV8825_prev.py  GPIO_mock.py  Testatprogramm.py  api.py  apitest.py  buzzer_controller.py  configure_logger.py  cube_placement.py  gui.py  gui_asyncio.py  gui_asyncio.py.old  measurelib.py  motor_control.py  run.py  runner.py  sound.py  testdata.py  utils.py
interface/: codejson.py  codejsontaster.py  config01.json  displayausgabe.py  displayausgabe2.py  displayausgabe3.py  getanfrage.py  postrequestVorlage.py  postrequestVorlagejson.py  soundee.py  taster.py  testfile.py
leistung/: leistung.py  leistung1.py
motorenscript/: gleichstromotor.py  schrittmotor.py  servomotor.py  servomotorsimple.py
notausscript/: abbruch.py  reboot.py
python/: DRV8825.py  Funktionen.py  GUI_Debugger.py  PiRelay6.py  Testatprogramm.py  auswurf_komplett.py  encodertest.py  measurelib.py  rampentest.py  solenoidtest.py  test.py  test2.py
scripts/: format.bat  format.ps1  format.sh  install.sh  run.bat  run.ps1  run.sh  service.sh  startup.sh  test.bat  test.ps1  test.sh  update.bat  update.ps1  update.sh
tests/: test_example.py
utils/: cube_placement.py  foo.py  motor_control.py
(+205 files in other folders)
