[tool.poetry]
package-mode = false
name = "pren2"
license = "Proprietary"
version = "0.0.1"
description = "PREN2 CubePiLer"
authors = [
    "Böhi Bianca <bianca.boehi@stud.hslu.ch>",
    "Bucher Daniel <daniel.bucher.01@stud.hslu.ch>",
    "Dan Livingston <dan.livingston@stud.hslu.ch>",
    "Schnarwiler Ramon <ramon.schnarwiler@stud.hslu.ch>",
    "Scholz Philipp <philipp.scholz@stud.hslu.ch>",
    "Schön Christian <christian.schoen@stud.hslu.ch>",
]
readme = "README.md"
repository = "https://github.com/danlivingston/PREN2"
documentation = "https://www.overleaf.com/project/65d8516955a5ecf8a48d2893"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
ultralytics = "^8.1.18"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
gpiozero = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
isort = "^5.13.2"
black = { extras = ["jupyter"], version = "^24.3.0" }
