[tool.poetry]
package-mode = false
name = "PREN2"
license = "MIT"
version = "1.0.0"
description = "PREN2 CubePiLer"
authors = [
    "Böhi Bianca <bianca.boehi@stud.hslu.ch>",
    "Bucher Daniel <daniel.bucher.01@stud.hslu.ch>",
    "Dan Livingston <dan.livingston@stud.hslu.ch>",
    "Schnarwiler Ramon <ramon.schnarwiler@stud.hslu.ch>",
    "Scholz Philipp <philipp.scholz@stud.hslu.ch>",
    "Schön Christian <christian.schoen@stud.hslu.ch>",
    "Zenhäusern Jonas <jonas.zenhaeusern@stud.hslu.ch>",
]
readme = "README.md"
repository = "https://github.com/danlivingston/PREN2"
documentation = "https://www.overleaf.com/project/65d8516955a5ecf8a48d2893"

[tool.poetry.dependencies]
customtkinter = "^5.2.2"
imutils = "^0.5.4"
loguru = "^0.7.2"
opencv-contrib-python = "^4.9.0.80"
opencv-python = "^4.9.0.80"
opencv-python-headless = "^4.9.0.80"
python = "^3.11"
python-dotenv = "^1.0.1"
rpi-gpio = "^0.7.1"
smbus2 = "^0.4.3"
ultralytics = "^8.1.18"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^24.2.0" }
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
isort = "^5.13.2"
